# ai_travel_agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  RAG_LangChain_Overview.md  README.md  app.py  cli.py  demo.py  docker-compose.yml  env.sample  models.py  pyproject.toml  run.bat  server.py  streamlit_app.py
.github/workflows/: ci.yml
agents/: graph.py
app/: main.py
code/: README.md
data/: prompts.md
data/knowledge/: destinations.md  travel_tips.md
draft/: README.md
graph/: README.md
observability/: README.md
prompts/: README.md  travel_prompts.md
screenshots/: README.md
src/: __init__.py  database.py
src/agents/: graph.py
src/graph/: __init__.py  visualization.py
src/observability/: __init__.py  logger.py  metrics.py  tracing.py
src/prompts/: __init__.py  templates.py
src/rag/: __init__.py  pipeline.py
src/tools/: events.py  flights.py  poi.py  weather.py
static/: README.md
templates/: README.md
tests/: conftest.py  test_agent.py  test_live_data.py  test_smoke.py
tools/: poi.py  weather.py
vector_db/: README.md
